--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <h1>Flappy Dragon</h1>
-        <canvas id="gameCanvas" width="400" height="600"></canvas>
+        <canvas id="gameCanvas"></canvas>
         <p class="controls">Click, Tap, or Press Spacebar to fly!</p>
     </div>
 
